Replace `PowerMock` with pure `Mockito` (#416)